--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthShapers"
         tools:targetApi="31">
-        <activity
+      <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".your_donations"
             android:exported="false" />
@@ -23,13 +30,7 @@
             android:exported="false" />
         <activity
             android:name=".RestaurantFrontPage"
-            android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        </activity>
+            android:exported="false"/>
         <activity
             android:name=".Profile"
             android:exported="false" />
@@ -44,6 +45,27 @@
             android:exported="false" />
         <activity
             android:name=".About_us"
+            android:exported="false" />
+                <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SigninActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Slide4Activity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Slide3Activity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Slide2Activity"
             android:exported="false" />
     </application>
 
