--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthShapers"
         tools:targetApi="31">
-      <activity
+        <activity
+            android:name=".Donation_Dialog_Box"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -21,7 +24,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Your_donations"
             android:exported="false" />
@@ -30,7 +32,7 @@
             android:exported="false" />
         <activity
             android:name=".RestaurantFrontPage"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Profile"
             android:exported="false" />
@@ -46,24 +48,18 @@
         <activity
             android:name=".About_us"
             android:exported="false" />
-                <activity
+        <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".SigninActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Slide4Activity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Slide3Activity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Slide2Activity"
             android:exported="false" />
