--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthShapers"
         tools:targetApi="31">
+        <activity
+            android:name=".NGO_New_donation"
+            android:exported="false" />
+        <activity
+            android:name=".NGO_Login"
+            android:exported="false" />
         <activity
             android:name=".Donation_Dialog_Box"
             android:exported="false" />
@@ -53,13 +61,13 @@
             android:exported="false" />
         <activity
             android:name=".SigninActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".Slide4Activity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".Slide3Activity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".Slide2Activity"
             android:exported="false" />
