--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthShapers"
         tools:targetApi="31">
+        <activity
+            android:name=".ResetPassword"
+            android:exported="false" />
+        <activity
+            android:name=".ForgotPassword"
+            android:exported="false" />
         <activity
             android:name=".NGO_New_donation"
             android:exported="false" />
@@ -26,15 +33,15 @@
         <activity
             android:name=".Donation_Dialog_Box"
             android:exported="false" />
-
-        <activity android:name=".SplashActivity" android:exported="true">
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".Your_donations"
             android:exported="false" />
@@ -65,7 +72,6 @@
         <activity
             android:name=".SigninActivity"
             android:exported="true" />
-
     </application>
 
 </manifest>
