giandam lang daan layouts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,9 @@
             android:name=".List_Requests"
             android:exported="false" />
         <activity
+            android:name=".Accepted_Requests"
+            android:exported="false" />
+        <activity
             android:name=".About_us"
             android:exported="false" />
         <activity
