--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,9 @@
         <activity
             android:name=".SigninActivity"
             android:exported="true" />
+        <activity
+            android:name=".Dashboard"
+            android:exported="false" />
     </application>
 
 </manifest>
